# kit-head

kit_head_description/launch/: rviz_config.rviz
kit_head_description/model/: depth_sensor.gazebo.xacro  kit_head.gazebo.xacro  kit_head.transmission.xacro  kit_head.urdf.xacro
kit_head_description/robot/: head.urdf  kit_head.urdf.xacro
kit_head_hw/: CMakeLists.txt  kit_head_hw_sim_plugins.xml  package.xml
kit_head_hw/config/: controllers.yaml
kit_head_hw/include/kit_head_hw/: default_kit_head_hw_sim.h  kit_head_hw_sim_plugin.h
kit_head_hw/launch/: head_sim.launch
kit_head_hw/src/: default_kit_head_hw_sim.cpp  kit_head_hw_sim_plugin.cpp
